fixing z-index of game counter & modal menu

--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,9 @@ body {
     height: 100%;
     background-color: rgba(139, 124, 124, 0.431);
     position: absolute;
+    z-index: 1100;
     top: 0;
     left: 0;
-    z-index: 30;
     display: flex;
     justify-content: center;
     align-items: center;
